# test_stm32_clang_cmake

./: .gitignore  .mxproject  CMakeLists.txt  CMakeLists.txt_arm  CMakeLists.txt_clang  Makefile  STM32F439ZITx_FLASH.ld  arm_toolchain.cmake  build.sh  clang_toolchain.cmake  test.ioc  zzbuild.sh
Core/Src/: main.c
